discussion/kv_engine/153935/153935_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: Free MutationLog memory used during warmup when done

Change-Id: I0deb1bf7b6941173b1e14da3a7131047d56e2f95

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-19 14:53:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-19 15:08:09.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9022/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& error_category() NOEXCEPT;
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:282:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:286:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:291:41: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
    return std::error_condition(int(e), error_category());
                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:139:52: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& engine_error_category() NOEXCEPT;
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:144:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:147:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:151:41: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
    return std::error_condition(int(e), engine_error_category());
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9022/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9022/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35885/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\memcached/engine_error.h(139): error C3646: "NOEXCEPT": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35885/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30673/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30673/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18526/ : FAILURE

Compile error at [2021-05-19T14:57:01.764Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10574/ : FAILURE

Compile error at [2021-05-19T14:56:46.111Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10574/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10974/ : FAILURE

Compile error at [2021-05-19T14:55:45.867Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10974/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9643/ : FAILURE

Compile error at [2021-05-19T14:55:01.256Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9643/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10714/ : FAILURE

Compile error at [2021-05-19T14:55:28.620Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10714/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7573/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
